@startuml
skinparam monochrome true
skinparam packageStyle rectangle
skinparam shadowing false

left to right direction

skinparam classAttributeIconSize 0

hide circle
hide methods


class Job {
    title
}

class Collaborator {
    name
    birthdate
    admissionDate
    contactMobile
    email
    taxpayerNumber
}

'class Person {
 '   name
 '   birthdate
 '   contactMobile
 '   email
 '   taxpayerNumber
'}

class Address{
    address
    zipCode
    city

}

class Document{
  documentType
  identificationNumber
}

' Relationships
Collaborator "1..*" -- "1" Address: has  >
Collaborator  "1" -- "1..*"  Document : has >
Job "1" -- "1..*" Collaborator : assign to >

@enduml
